tests/errors/ReadUndeclaredScalar.imp
VAR
  a
BEGIN
  READ b;
END
